# sis-services

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: main.rs
src/config/: config.rs
src/database/: neo4j.rs
src/handlers/: auth_helper.rs  mod.rs  sis_handler.rs
src/models/: attendance_model.rs  grade_model.rs  mod.rs  section_model.rs
src/repositories/: audit_repository.rs  lead_repository.rs  mod.rs  sis_repository.rs  user_repository.rs
src/routes/: mod.rs  sis_routes.rs
src/utils/: jwt.rs  mod.rs  response.rs
